/*
 * Copyright (C) 2017 Dgraph Labs, Inc. and Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "hakes-store/hakes-store/kv/proto";

package kv;

message ManifestChangeSet {
  // A set of changes that are applied atomically.
  repeated ManifestChange changes = 1;
}

message ManifestChange {
  string Id = 1;            // Table ID.
  enum Operation {
          CREATE = 0;
          DELETE = 1;
          MOVE = 2;
  }
  Operation Op   = 2;
  uint32 Level   = 3;       // Only used for CREATE and MOVE.
  uint32 compression = 4;   // Only used for CREATE Op.
}
